fixed spacing and authors on magazazine article and project blog

--- a/sass/_customVariables.scss
+++ b/sass/_customVariables.scss
@@ -79,7 +79,7 @@ $letter-wide: 0.1em;
 $gutter-default: 15px;
 $gutter-thin: 0.3em;
 $gutter-wide: 0.5em;
-$gutter-double: 30px;
+$gutter-double: 20px;
 
 //magazine sidebar widths
 $width-leftbar: 29.2%;
